# bps

./: CMakeLists.txt  main.cpp
debian/: changelog  control  copyright
libbps/: CMakeLists.txt  bps_3-vector.cpp  bps_3-vector.h  bps_constants.h  bps_n-vector.cpp  bps_n-vector.h  bps_particle.cpp  bps_particle.h  bps_quaternion.cpp  bps_quaternion.h  bps_relativity.cpp  bps_relativity.h
mensor/: CMakeLists.txt  glcanvas.cpp  glcanvas.h  main.cpp  main_window.cpp  main_window.h  main_window.ui
