PROJECT(BPS)

# Make the output of make more verbose.
SET(CMAKE_VERBOSE_MAKEFILE ON)

ADD_SUBDIRECTORY(libbps)
ADD_SUBDIRECTORY(mensor)

# Specify directories in which to search for includes and libraries.
INCLUDE_DIRECTORIES(BEFORE libbps)
LINK_DIRECTORIES(libbps)

ADD_EXECUTABLE(bpstest main.cpp)
TARGET_LINK_LIBRARIES(bpstest bps)

# We use CPack to generate the source tarball.
SET(CPACK_SOURCE_GENERATOR "TGZ")
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_PACKAGE_VERSION_PATCH "1")
SET(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
SET(CPACK_SOURCE_PACKAGE_FILE_NAME "bps-${CPACK_PACKAGE_VERSION}")
SET(CPACK_SOURCE_IGNORE_FILES
    "/\\\\.git/"
    "/debian/"
)
INCLUDE(CPack)
